tests/chainsaw/disallow-privileged-containers/bad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-privileged
spec:
  containers:
  - name: container01
    image: busybox:1.35
    args:
    - sleep
    - 1d
    securityContext:
      privileged: true
