tests/chainsaw/disallow-privileged-containers/good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod-not-privileged
spec:
  containers:
  - name: container01
    image: busybox:1.35
    args:
    - sleep
    - 1d
    securityContext:
      privileged: false
      allowPrivilegeEscalation: false
      runAsNonRoot: true
      seccompProfile:
        type: RuntimeDefault
      capabilities:
        drop:
        - ALL
