tests/chainsaw/disallow-privileged-containers/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-privileged-containers
spec:
  steps:
  - name: create a bad pod with privileged container
    try:
    - create:
        expect:
        - check:
            ($error != null): true
        file: bad-pod.yaml
  - name: create a good pod without privileged
    try:
    - create:
        expect:
        - check:
            ($error != null): false
        file: good-pod.yaml
